test/expected/declare_xxi-c.out
declare x as constexpr int
             ^
14: error: "constexpr": unsupported keyword in C
